# SITH_MISCHUNG_COMBUSTION

./: .dockerignore  .gitignore  CASAOS_DEPLOY.md  DEPLOYMENT_GUIDE.md  Dockerfile  GUIDE_WIKI_INSTALLATION.md  README.md  SUMMARY.md  VISUAL_COMPARISON.md  WIKI_IMPROVEMENTS.md  WIKI_MARKDOWN_GUIDE.md  WIKI_THERMAL_ANALYSIS.md  cea_bridge.py  cea_service.py  cleanup_app_lines.py  cleanup_app_lines_2.py  cleanup_app_lines_4.py  cleanup_app_lines_5.py  cleanup_app_lines_6.py  deploy-wiki.bat  deploy-wiki.sh  docker-compose.yml  docker-entrypoint.sh  fix_deploy.sh  fix_emojis.py  main.py  moteur fusée design v6.py  server_runner.py  utils.py  watchdog.sh  wiki.md  wiki.txt  wiki_app.py  wiki_thermal_content.txt
.obsidian/: workspace.json
archive_python/: cea_adapter.py  cleanup_app_lines_3.py  cleanup_app_lines_7.py  cleanup_app_lines_8.py  config.py  data.py  debug_cea.py  setup_env.ps1
core/: app.py
data/: dev.db
openfoam-cfd/: Dockerfile  README.md  docker-compose.yml
rocket_core/: Cargo.toml  build_err.txt  build_log.txt  build_log_2.txt
rocket_server/: Cargo.toml
rocket_server/src/: cea_client.rs  cfd_solver.rs  cooling_advanced.rs  geometry.rs  lib.rs  main.rs  materials.rs  motor_definition.rs  nozzle_physics.rs  rao_contour.rs  structural.rs
ui/: components.py
web/: .env.local.template  .gitignore  dev.db  middleware.ts  next.config.ts  package-lock.json  package.json  prisma.config.ts
wiki/: 1-Introduction-et-Concepts-Fondamentaux.md  10-Formules-Rapides.md  11-14-Analyses-Avancees.md  15-Simulation-Transitoire.md  2-Tuyere-de-Laval.md  Home.md  (+12 more)
(+84 files in other folders)
