[package]
name = "rocket_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
rocket_core = { path = "../rocket_core" }
ndarray = "0.16"
rayon = "1.10"

[lib]
name = "rocket_server"
path = "src/lib.rs"

[[bin]]
name = "rocket_server"
path = "src/main.rs"
